--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "astro": "^4.5.10",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   }
